v3.8.8 (XXXX-XX-XX)
-------------------

* Updated arangosync to v2.11.0.

* Changed default macOS CI compiler to LLVM clang-12.

* Fixed potential resource leak when reusing `rocksdb::PinnableSlice` instances
  without resetting them first. This issue can lead to the block cache filling
  up with data that will not be evicted from the block cache anymore.


v3.8.7 (2022-06-02)
-------------------

* Updated arangosync to v2.10.0.

* Fix behavior when accessing a view instead of a collection by name in a REST
  document operation. Now return a proper error.

* Fix ES-1147. Fixed boost propagation in STARTS_WITH function.

* Fix documentation of collection's `cacheEnabled` property default.

* Make all requests which are needed for shard resync at least medium priority
  to improve getting-in-sync under load.

* Very verbose warning from failing to parse GEO JSON in search. Has lead to
  billions of log lines on deployed services.

* Fixed Github issue #16279: assertion failure/crash in AQL query optimizer when
  permuting adjacent FOR loops that depended on each other.

* Fixed a potential hang on shutdown, when there were still document operations
  queued.

* No good reason to fatal error in agency state, when local database entries
  lack local timestamp (legacy). In that situation, we will record epoch begin
  as local time.

* Fixed BTS-860. Changed ArangoSearch index recovery procedure to remove
  necessity to always fully recreate index if IndexCreation marker encountered.

* Put hotbackup requests on the HIGH priority queue to make hotbackups work
  under high load (BTS-865).

* Updated OpenSSL to 1.1.1o and OpenLDAP to 2.6.2.

* Added option `--enable-revision-trees` to arangorestore, which will add the
  attributes `syncByRevision` and `usesRevisionsAsDocumentIds` to the collection
  structure if they are missing. As a consequence, these collections created by
  arangorestore will be able to use revision trees and a faster getting-in-sync