@@ -1,6 +1,9 @@
 v3.8.8 (XXXX-XX-XX)
 -------------------
 
+* BTS-913: check for proper timezone setup of the system on startup.
+  This evades errors that else would only occur in AQL-Functions at runtime
+
 * Updated arangosync to v2.11.0.
 
 * Changed default macOS CI compiler to LLVM clang-12.
